--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,15 @@
 }
 
 html {
+  display: block;
+}
+
+body {
   font-family: 'Open Sans', Arial, sans-serif;
+  margin: 0 10%;
+}
+
+h1 {
 }
 
 /* Set nav styling */
@@ -12,6 +20,12 @@ html {
 nav ul {
   font-weight: 600;
   text-transform: uppercase;
+  list-style: none;
+}
+
+nav ul li {
+  display: inline-block;
+  padding: 10px 30px;
 }
 
 nav ul a:link {
@@ -28,19 +42,20 @@ nav ul a:hover {
 ul.swatches {
   display: inline-block;
   text-decoration: none;
+  margin: 20px 30px;
 }
 
 ul.swatches li {
-  width: 200px;
-  height: 30px;
-  line-height: 30px;
+  width: 300px;
+  height: 60px;
+  line-height: 60px;
   margin: 5px;
   text-align: center;
   padding: 3px;
   border: 1px solid #f1f1f1;
-  border-radius: 3px;
+  border-radius: 5px;
   font-family: Roboto;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 700;
   color: #fff;
 }
