add content and styling for typography

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@
 
 html {
   display: block;
+  font-family: 'Inconsolata', monospace;
+  font-family: 'Lato', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 body {
@@ -12,7 +15,10 @@ body {
   margin: 0 10%;
 }
 
-h1 {
+h1,
+h2 {
+  text-transform: uppercase;
+  padding: 10px 0;
 }
 
 /* Set nav styling */
@@ -112,4 +118,88 @@ ul.swatches li {
 
 #greens li.green4 {
   background-color: #385f14;
+}
+
+/* Styling for typography */
+
+.headings {
+  text-transform: capitalize;
+}
+
+.headings h1 {
+  font-size: 34px;
+}
+
+.typography h3 {
+  font-size: 20px;
+  padding: 0 0 10px 0;
+  font-weight: 400;
+}
+
+.font1,
+.font2,
+.font3 {
+  border: 2px solid #dbdbdb;
+  border-radius: 5px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+  width: 500px;
+  padding: 10px;
+  margin: 0 0 10px 10px;
+}
+
+.font1 p,
+.font2 p,
+.font3 p {
+  font-size: 24px;
+  padding: 0 0 10px 20px;
+}
+
+.font1 p {
+  font-family: Lato, sans-serif;
+}
+
+.font1 p.style1 {
+  font-weight: 100;
+}
+
+.font1 p.style2 {
+  font-weight: 400;
+}
+
+.font1 p.style3 {
+  font-weight: 400;
+  font-style: italic;
+}
+
+.font2 {
+  font-family: Ubuntu, sans-serif;
+}
+
+.font2 p.style1 {
+  font-weight: 300;
+}
+
+.font2 p.style2 {
+  font-weight: 500;
+}
+
+.font2 p.style3 {
+  font-weight: 700;
+  font-style: italic;
+}
+
+.font3 {
+  font-family: Inconsolata, sans-serif;
+}
+
+.font3 p.style1 {
+  font-weight: 400;
+}
+
+.font3 p.style2 {
+  font-weight: 600;
+}
+
+.font3 p.style3 {
+  font-weight: 800;
 }
