--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,10 @@
 
 html {
   display: block;
-  font-family: 'Inconsolata', monospace;
-  font-family: 'Lato', sans-serif;
-  font-family: 'Ubuntu', sans-serif;
 }
 
 body {
-  font-family: 'Open Sans', Arial, sans-serif;
+  font-family: Roboto, Arial, sans-serif;
   margin: 0 10%;
 }
 
@@ -202,4 +199,44 @@ ul.swatches li {
 
 .font3 p.style3 {
   font-weight: 800;
+}
+
+/* Styling for Type */
+
+.headings {
+  font-family: Roboto;
+}
+
+.headings h1,
+.headings h2,
+.headings h3,
+.headings h4,
+.headings h5,
+.headings h6 {
+  padding: 20px 20px;
+  font-family: 'Segoe UI', sans-serif;
+}
+
+.headings h1 {
+  font-size: xx-large;
+}
+
+.headings h2 {
+  font-size: x-large;
+}
+
+.headings h3 {
+  font-size: large;
+}
+
+.headings h4 {
+  font-size: medium;
+}
+
+.headings h5 {
+  font-size: small;
+}
+
+.headings h6 {
+  font-size: x-small;
 }
